force-app/main/default/objects/PermissionSet_Home__dll/fields/PermissionsEinsteinCopilotUser__c.field-meta.xml
<CustomField>
    <fullName>PermissionsEinsteinCopilotUser__c</fullName>
    <label>Use Agentforce Default Agent</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>PermissionsEinsteinCopilotUser</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>