force-app/main/default/objects/PermissionSet_Home__dll/fields/PermissionSetGroupId__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetGroupId__c</fullName>
    <label>PermissionSetGroup ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>PermissionSetGroupId</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>